Add the roofer exe to the resource

--- a/docker/.env
+++ b/docker/.env
@@ -26,6 +26,7 @@ TYLER_METADATA_JSON=/opt/3dbag-pipeline/tools/share/tyler/resources/geof/metadat
 EXE_PATH_TYLER=/opt/3dbag-pipeline/tools/bin/tyler
 EXE_PATH_TYLER_DB=/opt/3dbag-pipeline/tools/bin/tyler-db
 EXE_PATH_ROOFER_CROP=/opt/3dbag-pipeline/tools/bin/crop
+EXE_PATH_ROOFER_ROOFER=/opt/3dbag-pipeline/tools/bin/roofer
 EXE_PATH_ROOFER_RECONSTRUCT=/opt/3dbag-pipeline/tools/bin/geof
 FLOWCHART_PATH_RECONSTRUCT=/opt/3dbag-pipeline/tools/share/geoflow-bundle/flowcharts/reconstruct_bag.json
 EXE_PATH_OGR2OGR=/opt/3dbag-pipeline/tools/bin/ogr2ogr
