Configure FileStore from env

--- a/docker/.env
+++ b/docker/.env
@@ -6,6 +6,8 @@ DAGSTER_POSTGRES_DB="postgres_db"
 TOOLS_DIR=/opt/3dbag-pipeline/tools
 
 BAG3D_VENVS=/3dbag-pipeline/venvs
+BAG3D_FILESTORE=/data/volume
+BAG3D_RELEASE_VERSION=develop
 BAG3D_TEST_DATA=/data/volume
 BAG3D_FLOORS_ESTIMATION_MODEL=/data/volume/model/pipeline_model1_gbr_untuned.joblib
 BAG3D_EXPORT_DIR=/data/volume/reconstruction_input/3DBAG/export
