--- a/scripts/symlink_laz_per_province/requirements.txt
+++ b/scripts/symlink_laz_per_province/requirements.txt
@@ -1,2 +1,3 @@
 bag3d-common @ git+https://github.com/3DBAG/3dbag-pipeline.git@develop#egg=bag3d-common&subdirectory=packages/common
 shapely==2.0.6
+psycopg==3.2.3
