--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,3 +2,11 @@ dagster
 dagster-webserver
 dagster-postgres
 pytest-dotenv
+mkdocs
+mkdocstrings[python]
+mkdocs-gen-files
+mkdocs-literate-nav
+mkdocs-section-index
+mkdocs-material
+markdown-include
+ruff
