--- a/docker/.env
+++ b/docker/.env
@@ -1,3 +1,4 @@
+DAGSTER_ENVIRONMENT="test"
 DAGSTER_HOME=/opt/dagster/dagster_home
 DAGSTER_POSTGRES_USER="postgres_user"
 DAGSTER_POSTGRES_PASSWORD="postgres_password"
