--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -23,7 +23,7 @@ services:
         - pg_pswd=$BAG3D_PG_PASSWORD
         - pg_db=$BAG3D_PG_DATABASE
     command: ["-c", "shared_buffers=8GB", "-c", "max_connections=50", "-c", "work_mem=30MB", "-c", "logging_collector=on", "-c", "log_statement=all", "-c", "log_directory=/var/log/postgresql/"]
-    platform: linux/arm64
+    platform: linux/amd64
     container_name: bag3d-data-postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d ${BAG3D_PG_DATABASE}"]
@@ -62,7 +62,6 @@ services:
       dockerfile: docker/pipeline/bag3d-core.dockerfile
       args:
         - VERSION=develop
-    platform: linux/arm64
     container_name: 3dbag-pipeline-core-develop
     image: 3dbag-pipeline-core:develop
     restart: always
@@ -106,7 +105,6 @@ services:
       dockerfile: docker/pipeline/bag3d-floors-estimation.dockerfile
       args:
         - VERSION=develop
-    platform: linux/arm64
     container_name: 3dbag-pipeline-floors-estimation-develop
     image: 3dbag-pipeline-floors-estimation:develop
     restart: always
@@ -143,7 +141,6 @@ services:
       dockerfile: docker/pipeline/bag3d-party-walls.dockerfile
       args:
         - VERSION=develop
-    platform: linux/arm64
     container_name: 3dbag-pipeline-party-walls-develop
     image: 3dbag-pipeline-party-walls:develop
     restart: always
