--- a/docker/.env
+++ b/docker/.env
@@ -19,6 +19,7 @@ DAGSTER_POSTGRES_DB="postgres_db"
 # 3dbag-pipeline resource configuration
 DAGSTER_ENVIRONMENT="test"
 BAG3D_FILESTORE="/data/volume"
+BAG3D_FILESTORE_FASTSSD="/data/volume"
 BAG3D_RELEASE_VERSION="develop"
 BAG3D_FLOORS_ESTIMATION_MODEL="/data/volume/model/pipeline_model1_gbr_untuned.joblib"
 BAG3D_TEST_DATA="/data/volume"
