--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -18,31 +18,31 @@ classifiers = [
     "Topic :: Scientific/Engineering :: GIS",
     "License :: OSI Approved :: Apache Software License"
 ]
-urls = { github = "https://github.com/3BAG/3dbag-pipeline" }
+urls = { github = "https://github.com/3DBAG/3dbag-pipeline" }
 dependencies = [
-    "bag3d-common @ git+https://github.com/3DBAG/3dbag-pipeline.git@develop#egg=bag3d-common&subdirectory=packages/common",
-    "urban-morphology-3d @ git+https://github.com/3DGI/urban-morphology-3d.git@onlysharedwalls#egg=urban-morphology-3d",
-    "shapely",
-    "numpy",
-    "pandas",
-    "dagster",
-    "dagster-postgres", # always need dagster-postgres, because we are using Postgres as the dagster run storage
+    "dagster>=1.9.4",
+    "dagster-postgres>=0.25.4",
+    "numpy>=1.24.4",
+    "pandas>=2.1.0",
+    "shapely>=2.0.1",
+    "urban-morphology-3d",
+    "bag3d-common",
 ]
 
 [project.optional-dependencies] 
-dev = ["pytest", "bumpver", "tox", "pytest-dotenv", "coverage", "ruff"]
-
-[tool.bumpver]
-current_version = "2024.1004"
-version_pattern = "YYYY.BUILD"
-commit_message = "bump version {old_version} -> {new_version}"
-commit = true
-tag = true
-push = false
-
-[tool.bumpver.file_patterns]
-"pyproject.toml" = [
-    'version = "{version}"',
+dev = [
+    "coverage>=7.6.8",
+    "pytest>=8.3.4",
+    "pytest-dotenv>=0.5.2",
+    "ruff>=0.8.1",
+]
+docs = [
+    "markdown-include>=0.8.1",
+    "mkdocs-material>=9.5.48",
+    "mkdocs>=1.6.1",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-literate-nav>=0.6.1",
+    "mkdocs-section-index>=0.3.9",
 ]
 
 [tool.ruff]
@@ -52,3 +52,7 @@ line-length = 88
 quote-style = "double"
 indent-style = "space"
 docstring-code-format = false
+
+[tool.uv.sources]
+urban-morphology-3d = { git = "https://github.com/3DGI/urban-morphology-3d.git", rev = "onlysharedwalls" }
+bag3d-common = { path = "../common"}
