--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -7,7 +7,7 @@ name = "bag3d-core"
 version = "2024.1006"
 description = "Workflow for producing the 3D BAG core data set"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 authors = [
     { name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl" },
     { name = "Ravi Peters", email = "ravi.peters@3dgi.nl" },
@@ -20,30 +20,33 @@ classifiers = [
 ]
 urls = { github = "https://github.com/3DBAG/3dbag-pipeline" }
 dependencies = [
-    "bag3d-common @ git+https://github.com/3DBAG/3dbag-pipeline.git@develop#egg=bag3d-common&subdirectory=packages/common",
-    "dagster",
-    "dagster-postgres",
-    "dagster-shell",
-    "docker",
-    "pgutils @ git+https://github.com/balazsdukai/pgutils.git@2024.1013#egg=pgutils",
-    "psycopg[binary]",
-    "lxml>=4.6",
-    "fabric"
+    "pgutils",
+    "bag3d-common",
+    "psycopg[binary]>=3.2.3",
+    "dagster>=1.9.4",
+    "dagster-postgres>=0.25.4",
+    "dagster-shell>=0.25.4",
+    "docker>=7.1.0",
+    "fabric>=3.2.2",
+    "lxml>=5.3.0",
 ]
-optional-dependencies = { dev = ["pytest", "bumpver", "tox", "dagster-webserver", "pytest-dotenv", "coverage", "ruff"] }
 
-[tool.bumpver]
-current_version = "2024.1006"
-version_pattern = "YYYY.BUILD"
-commit_message = "bump version {old_version} -> {new_version}"
-commit = true
-tag = true
-push = false
-
-[tool.bumpver.file_patterns]
-"pyproject.toml" = [
-    'version = "{version}"',
+[project.optional-dependencies] 
+dev = [
+    "coverage>=7.6.8",
+    "pytest>=8.3.4",
+    "pytest-dotenv>=0.5.2",
+    "ruff>=0.8.1",
 ]
+docs = [
+    "markdown-include>=0.8.1",
+    "mkdocs-material>=9.5.48",
+    "mkdocs>=1.6.1",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-literate-nav>=0.6.1",
+    "mkdocs-section-index>=0.3.9",
+]
+
 
 [tool.ruff]
 line-length = 88
@@ -52,3 +55,8 @@ line-length = 88
 quote-style = "double"
 indent-style = "space"
 docstring-code-format = false
+
+
+[tool.uv.sources]
+bag3d-common = { path = "../common"}
+pgutils = { git = "https://github.com/balazsdukai/pgutils.git", rev = "2024.1013" }
