--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -22,9 +22,9 @@ urls = { github = "https://github.com/3DBAG/3dbag-pipeline" }
 dependencies = [
     "dagster-shell>=0.25.3",
     "dagster>=1.9.3",
-    "certifi>=2024.8.30",
+    "certifi==2023.5.7",
     "docker>=7.1.0",
-    "requests>=2.32.3",
+    "requests==2.31.0",
     "pgutils",
     "psycopg[binary]>=3.2.3",
 ]
