--- a/.github/workflows/lint-and-formatting.yaml
+++ b/.github/workflows/lint-and-formatting.yaml
@@ -18,9 +18,8 @@ jobs:
           python-version: "3.11"
       - name: Intall uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: Install dependencies
-        run: uv pip install ruff --system
+
       - name: Lint
-        run: ruff check
+        run: uv tool run ruff check 
       - name: Format
-        run: ruff format --check
+        run: uv tool run ruff format --check
