--- a/.github/workflows/lint-and-formatting.yaml
+++ b/.github/workflows/lint-and-formatting.yaml
@@ -16,9 +16,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Intall uv
+      - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
-
       - name: Lint
         run: uv tool run ruff check 
       - name: Format
