--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -21,7 +21,6 @@ classifiers = [
 urls = { github = "https://github.com/3DBAG/3dbag-pipeline" }
 dependencies = [
     "pgutils",
-    "bag3d-common",
     "psycopg[binary]>=3.2.3",
     "dagster>=1.9.4",
     "dagster-postgres>=0.25.4",
@@ -29,6 +28,7 @@ dependencies = [
     "docker>=7.1.0",
     "fabric>=3.2.2",
     "lxml>=5.3.0",
+    "bag3d-common",
 ]
 
 [project.optional-dependencies] 
@@ -48,5 +48,5 @@ docstring-code-format = false
 
 
 [tool.uv.sources]
-bag3d-common = { path = "../common/"}
 pgutils = { git = "https://github.com/balazsdukai/pgutils.git", rev = "2024.1013" }
+bag3d-common = { path = "../common", editable = true }
