--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -25,7 +25,7 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: |
-          pip install -r requirements-dev.txt
-          pip install --no-deps packages/common
-      - run: mkdocs gh-deploy --force
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+      - name: Run mkdocs
+        run: uv run mkdocs gh-deploy --force
