--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -5,6 +5,10 @@ services:
   dagster-postgresql:
     image: postgres:16
     container_name: bag3d-dagster-postgresql-${BAG3D_DOCKER_IMAGE_TAG}
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d ${DAGSTER_POSTGRES_DB} -U ${DAGSTER_POSTGRES_USER}" ]
+      interval: 3s
+      retries: 10
     environment:
       POSTGRES_USER: $DAGSTER_POSTGRES_USER
       POSTGRES_PASSWORD: $DAGSTER_POSTGRES_PASSWORD
@@ -25,11 +29,9 @@ services:
     command: ["-c", "shared_buffers=8GB", "-c", "max_connections=200", "-c", "work_mem=30MB", "-c", "logging_collector=on", "-c", "log_statement=all", "-c", "log_directory=/var/log/postgresql/"]
     container_name: bag3d-data-postgresql-${BAG3D_DOCKER_IMAGE_TAG}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d ${BAG3D_PG_DATABASE}"]
+      test: ["CMD-SHELL", "pg_isready -d ${BAG3D_PG_DATABASE} -U {BAG3D_PG_USER}"]
       interval: 3s
-      retries: 10
-      start_period: 30s
-      timeout: 10s
+      retries: 20
     shm_size: '1gb' 
     ports:
       - "${BAG3D_PG_PORT_ON_HOST}:5432"
@@ -64,6 +66,11 @@ services:
     image: 3dbag-pipeline-core:${BAG3D_DOCKER_IMAGE_TAG}
     pull_policy: build
     container_name: 3dbag-pipeline-core-${BAG3D_DOCKER_IMAGE_TAG}
+    # the port is built into the image
+    healthcheck:
+      test: ["CMD-SHELL", "dagster api grpc-health-check -p 4000"]
+      interval: 2s
+      retries: 10
     restart: always
     environment:
       DAGSTER_CURRENT_IMAGE: "3dbag-pipeline-core:${BAG3D_DOCKER_IMAGE_TAG}"
@@ -108,6 +115,11 @@ services:
     image: 3dbag-pipeline-floors-estimation:${BAG3D_DOCKER_IMAGE_TAG}
     pull_policy: build
     container_name: 3dbag-pipeline-floors-estimation-${BAG3D_DOCKER_IMAGE_TAG}
+    # the port is built into the image
+    healthcheck:
+      test: [ "CMD-SHELL", "dagster api grpc-health-check -p 4001" ]
+      interval: 2s
+      retries: 10
     restart: always
     environment:
       DAGSTER_CURRENT_IMAGE: "3dbag-pipeline-floors-estimation:${BAG3D_DOCKER_IMAGE_TAG}"
@@ -146,6 +158,11 @@ services:
     image: 3dbag-pipeline-party-walls:${BAG3D_DOCKER_IMAGE_TAG}
     pull_policy: build
     container_name: 3dbag-pipeline-party-walls-${BAG3D_DOCKER_IMAGE_TAG}
+    # the port is built into the image
+    healthcheck:
+      test: [ "CMD-SHELL", "dagster api grpc-health-check -p 4002" ]
+      interval: 2s
+      retries: 10
     restart: always
     environment:
       DAGSTER_CURRENT_IMAGE: "3dbag-pipeline-party-walls:${BAG3D_DOCKER_IMAGE_TAG}"
@@ -204,10 +221,18 @@ services:
     networks:
       - bag3d-network
     depends_on:
-      - dagster-postgresql
-      - bag3d-core
-      - bag3d-floors-estimation
-      - bag3d-party-walls
+      dagster-postgresql:
+        condition: service_healthy
+        restart: true
+      bag3d-core:
+        condition: service_healthy
+        restart: true
+      bag3d-floors-estimation:
+        condition: service_healthy
+        restart: true
+      bag3d-party-walls:
+        condition: service_healthy
+        restart: true
 
   # This service runs the dagster-daemon process, which is responsible for taking runs
   # off of the queue and launching them, as well as creating runs from schedules or sensors.
@@ -229,10 +254,18 @@ services:
     networks:
       - bag3d-network
     depends_on:
-      - dagster-postgresql
-      - bag3d-core
-      - bag3d-floors-estimation
-      - bag3d-party-walls
+      dagster-postgresql:
+        condition: service_healthy
+        restart: true
+      bag3d-core:
+        condition: service_healthy
+        restart: true
+      bag3d-floors-estimation:
+        condition: service_healthy
+        restart: true
+      bag3d-party-walls:
+        condition: service_healthy
+        restart: true
 
 volumes:
   bag3d-data-postgresql:
