--- a/docker/.env
+++ b/docker/.env
@@ -12,9 +12,9 @@ TEMP_CONTAINER="${COMPOSE_PROJECT_NAME}-temp-container"
 # Dagster instance configuration
 DAGSTER_HOME="/opt/dagster/dagster_home"
 DAGSTER_SERVER_PORT=3003
-DAGSTER_POSTGRES_USER="postgres_user"
-DAGSTER_POSTGRES_PASSWORD="postgres_password"
-DAGSTER_POSTGRES_DB="postgres_db"
+DAGSTER_POSTGRES_USER="dagster"
+DAGSTER_POSTGRES_PASSWORD="dagster_pwd"
+DAGSTER_POSTGRES_DB="dagster"
 
 # 3dbag-pipeline resource configuration
 DAGSTER_ENVIRONMENT="test"
