Try fixing docker image builds

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -62,7 +62,7 @@ services:
       context: ../
       dockerfile: docker/pipeline/bag3d-core.dockerfile
       args:
-        - VERSION=develop
+        - VERSION=${BAG3D_DOCKER_IMAGE_TAG}
     image: 3dbag-pipeline-core:${BAG3D_DOCKER_IMAGE_TAG}
     pull_policy: build
     container_name: 3dbag-pipeline-core-${BAG3D_DOCKER_IMAGE_TAG}
@@ -111,7 +111,7 @@ services:
       context: ../
       dockerfile: docker/pipeline/bag3d-floors-estimation.dockerfile
       args:
-        - VERSION=develop
+        - VERSION=${BAG3D_DOCKER_IMAGE_TAG}
     image: 3dbag-pipeline-floors-estimation:${BAG3D_DOCKER_IMAGE_TAG}
     pull_policy: build
     container_name: 3dbag-pipeline-floors-estimation-${BAG3D_DOCKER_IMAGE_TAG}
@@ -154,7 +154,7 @@ services:
       context: ../
       dockerfile: docker/pipeline/bag3d-party-walls.dockerfile
       args:
-        - VERSION=develop
+        - VERSION=${BAG3D_DOCKER_IMAGE_TAG}
     image: 3dbag-pipeline-party-walls:${BAG3D_DOCKER_IMAGE_TAG}
     pull_policy: build
     container_name: 3dbag-pipeline-party-walls-${BAG3D_DOCKER_IMAGE_TAG}
