--- a/.github/workflows/lint-and-formatting.yaml
+++ b/.github/workflows/lint-and-formatting.yaml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Intall uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Install dependencies
         run: uv pip install ruff --system
       - name: Lint
