Set path differently

--- a/docker/tools/Dockerfile
+++ b/docker/tools/Dockerfile
@@ -28,9 +28,7 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     libxml++2.6-dev parallel
 
 ADD https://astral.sh/uv/0.5.26/install.sh /uv-installer.sh
-RUN sh /uv-installer.sh && rm /uv-installer.sh && \
-    export PATH=$PATH:$HOME/.local/bin && \
-    . $HOME/.local/bin/env \
+RUN sh /uv-installer.sh && rm /uv-installer.sh
 ENV PATH="${HOME}/.local/bin:${PATH}"
 RUN which uv
 # Python 3.11 is currently required by the party_walls package
