--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -21,21 +21,21 @@ classifiers = [
 urls = { github = "https://github.com/3DBAG/3dbag-pipeline" }
 dependencies = [
     "pgutils",
-    "psycopg[binary]>=3.2.3",
-    "dagster>=1.9.4",
-    "dagster-postgres>=0.25.4",
-    "dagster-shell>=0.25.4",
-    "docker>=7.1.0",
-    "fabric>=3.2.2",
-    "lxml>=5.3.0",
+    "psycopg[binary]~=3.2.3",
+    "dagster~=1.9.4",
+    "dagster-postgres~=0.25.4",
+    "dagster-shell~=0.25.4",
+    "docker~=7.1.0",
+    "fabric~=3.2.2",
+    "lxml~=5.3.0",
     "bag3d-common",
 ]
 
 [project.optional-dependencies] 
 dev = [
-    "coverage>=7.6.8",
-    "pytest>=8.3.4",
-    "pytest-dotenv>=0.5.2",
+    "coverage~=7.6.8",
+    "pytest~=8.3.4",
+    "pytest-dotenv~=0.5.2",
 ]
 
 [tool.ruff]
