--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bag3d-party-walls"
-version = "2024.1004"
+version = "2024.12.16"
 description = "Workflow for calculating the party walls in the 3D BAG."
 readme = "README.md"
 requires-python = ">=3.11"
@@ -37,12 +37,7 @@ dev = [
 ]
 
 [tool.ruff]
-line-length = 88
-
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
-docstring-code-format = false
+# Need this block here so that ruff includes this package's files. The ruff config is in the root pyproject.toml file.
 
 [tool.uv.sources]
 urban-morphology-3d = { git = "https://github.com/3DGI/urban-morphology-3d.git", rev = "onlysharedwalls" }
