--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,41 @@ default-groups = ["dev", "docs", "lint"]
 
 [tool.uv.sources]
 bag3d-common = { path = "packages/common" }
+
+[tool.ruff]
+include = ["packages/*/pyproject.toml", "scripts/*/*.py"]
+line-length = 88
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+docstring-code-format = false
+
+[tool.bumpver]
+current_version = "2024.12.16"
+version_pattern = "YYYY.MM.DD"
+commit_message = "bump version {old_version} -> {new_version}"
+tag_message = "{new_version}"
+tag_scope = "default"
+pre_commit_hook = ""
+post_commit_hook = ""
+commit = true
+tag = true
+push = true
+
+[tool.bumpver.file_patterns]
+"pyproject.toml" = [
+    'current_version = "{version}"',
+]
+"packages/common/pyproject.toml" = [
+    'version = "{version}"',
+]
+"packages/core/pyproject.toml" = [
+    'version = "{version}"',
+]
+"packages/floors_estimation/pyproject.toml" = [
+    'version = "{version}"',
+]
+"packages/party_walls/pyproject.toml" = [
+    'version = "{version}"',
+]
