--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "3dbag-pipeline"
-version = "0.1.0"
+version = "2024.12.15"
 description = "Development requirements of the 3DBAG pipeline"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -43,7 +43,7 @@ indent-style = "space"
 docstring-code-format = false
 
 [tool.bumpver]
-current_version = "2024.12.16"
+current_version = "2024.12.15"
 version_pattern = "YYYY.MM.DD"
 commit_message = "bump version {old_version} -> {new_version}"
 tag_message = "{new_version}"
@@ -57,6 +57,7 @@ push = true
 [tool.bumpver.file_patterns]
 "pyproject.toml" = [
     'current_version = "{version}"',
+    'version = "{version}"',
 ]
 "packages/common/pyproject.toml" = [
     'version = "{version}"',
