--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -29,7 +29,7 @@ services:
     command: ["-c", "shared_buffers=8GB", "-c", "max_connections=200", "-c", "work_mem=30MB", "-c", "logging_collector=on", "-c", "log_statement=all", "-c", "log_directory=/var/log/postgresql/"]
     container_name: bag3d-data-postgresql-${BAG3D_DOCKER_IMAGE_TAG}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d ${BAG3D_PG_DATABASE} -U {BAG3D_PG_USER}"]
+      test: ["CMD-SHELL", "pg_isready -d ${BAG3D_PG_DATABASE} -U {BAG3D_PG_USER} -p {BAG3D_PG_PORT_ON_HOST}"]
       interval: 3s
       retries: 20
     shm_size: '1gb' 
