--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -28,6 +28,8 @@ services:
         - pg_db=$BAG3D_PG_DATABASE
     command: ["-c", "shared_buffers=8GB", "-c", "max_connections=200", "-c", "work_mem=30MB", "-c", "logging_collector=on", "-c", "log_statement=all", "-c", "log_directory=/var/log/postgresql/"]
     container_name: bag3d-data-postgresql-${BAG3D_DOCKER_IMAGE_TAG}
+    environment:
+      PGDATA: /var/lib/postgresql/data/pgdata
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d ${BAG3D_PG_DATABASE} -U {BAG3D_PG_USER}"]
       interval: 3s
